Aug 4, 2023
  updated list of processed species

May 24, 2023
  simplified code; implemented code analysis for data loaded after specific cutoff date

May 23, 2023
  upgraded logging to log4j2

Jan 10, 2023
  updated build.gradle to be gradle 6.x + compatible