@@ -23,14 +23,14 @@ repositories {
 
 dependencies {
     implementation 'org.apache.commons:commons-dbcp2:2.9.0'
-    implementation 'commons-io:commons-io:2.6'
+    implementation 'commons-io:commons-io:2.7'
     implementation 'commons-net:commons-net:3.9.0'
-    implementation 'org.apache.httpcomponents:httpclient:4.5.7'
+    implementation 'org.apache.httpcomponents:httpclient:4.5.8'
     implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
     implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
-    implementation 'com.oracle.database.jdbc:ojdbc8:21.4.0.0'
-    implementation 'org.springframework:spring-beans:5.3.2'
-    implementation 'org.springframework:spring-jdbc:5.3.2'
+    implementation 'com.oracle.database.jdbc:ojdbc8:21.5.0.0'
+    implementation 'org.springframework:spring-beans:5.3.3'
+    implementation 'org.springframework:spring-jdbc:5.3.3'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
