@@ -1,3 +1,6 @@
+Aug 8, 2023
+  when loading skip species not in RGD
+
 Aug 4, 2023
   updated list of processed species
 
